--- a/Boutique-FE/src/pages/adminpage/add-items/add-items.component.html
+++ b/Boutique-FE/src/pages/adminpage/add-items/add-items.component.html
@@ -30,13 +30,13 @@
     </div>
 
     <!-- Same Pinch Field -->
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="samepinch">Same Pinch</label>
       <select id="samepinch" name="samepinch" [(ngModel)]="samepinch" required>
         <option value="true">True</option>
         <option value="false">False</option>
       </select>
-    </div>
+    </div> -->
 
     <!-- Category Field -->
     <div class="form-group">
@@ -48,6 +48,12 @@
     <div class="form-group">
       <label for="stock">Stock</label>
       <input type="number" id="stock" name="stock" [(ngModel)]="stock" placeholder="Enter stock quantity" required />
+    </div>
+
+    <!--vedioUrl-->
+    <div class="form-group">
+      <label for="vedioUrl">vedioUrl</label>
+      <textarea id="vedioUrl" name="vedioUrl" [(ngModel)]="vedioUrl" placeholder="Enter vediourl" rows="4" required></textarea>
     </div>
 
     <!-- Image Upload Field -->
