order creation flow implemented

--- a/Boutique-FE/src/pages/cart/cart.component.html
+++ b/Boutique-FE/src/pages/cart/cart.component.html
@@ -86,7 +86,7 @@
       </div>
     
       <!-- Checkout Button -->
-      <button class="checkout-btn animated" (click)="proceedToCheckout()">Proceed to Checkout</button>
+      <button class="checkout-btn animated" (click)="openDeliveryAddressModel()">Proceed to Checkout</button>
     </div>
     
     
