--- a/Boutique-FE/src/pages/dashboard/dashboard.component.html
+++ b/Boutique-FE/src/pages/dashboard/dashboard.component.html
@@ -1,19 +1,36 @@
-<div class="main">
-  <div class="sec">
-    <div class="sec1">
-      <h1 class="title">MIYA</h1>
-      <p>Get Customized Costumes Tailored Just for You</p>
-      <div class="btn">
-        <button class="btn1" (click)="cutomize()">Explore More</button>
-      </div>
+<div class="layout">
+  <div class="mokshe">
+    <div class="image-container">
+     
     </div>
-    <div class="sec2">
-      <h1 class="title">SAME PINCH</h1>
-      <p>Discover Ready-Made Apparel That Fits Your Style</p>
+    <div class="logo-container">
+     <div class="container">
+      <div class="image image1"></div>
+      <div class="image image2"></div>
+      <div class="image image3"></div>
+      <div class="image image4"></div>
+    
+    </div>
       <div class="btn">
-        <button class="btn1">Shop Now</button>
+        <button class="btn1" (click)="cutomize()">Explore</button>
+      </div>
+     
+    </div>
+  </div>
+  <div class="samepinch">
+    <div class="image-container1">
+      
+    </div>
+    <div class="logo-container1">
+      <div class="container1">
+        <div class="image1 image5"></div>
+        <div class="image1 image6"></div>
+        <div class="image1 image7"></div>
+        <div class="image1 image8"></div>
+      </div>
+      <div class="btn">
+        <button class="btn1">Explore</button>
       </div>
     </div>
   </div>
 </div>
-
