--- a/Boutique-FE/src/app/order-details/order-details.component.html
+++ b/Boutique-FE/src/app/order-details/order-details.component.html
@@ -10,7 +10,7 @@
       <h2>Order Summary</h2>
       <p><strong>Order ID:{{orders.id}}</strong> </p>
       <p><strong>Order Date:{{jsDate}}</strong> </p>
-      <p><strong>Status:{{orders.status}}</strong> </p>
+      <p><strong>PaymentStatus:{{orders.paymentStatus}}</strong> </p>
     </section>
   
     <!-- Customer Information -->
@@ -43,10 +43,28 @@
     <!-- Payment & Delivery -->
     <section class="payment-delivery">
       <h2>Payment & Delivery</h2>
-      <p><strong>Payment Status:{{orders.paymentStatus}}</strong> </p>
-      <p><strong>Transaction ID:{{orders.paymentId}}</strong> </p>
-      <p><strong>payment Date:{{this.paymentDate}}</strong> </p>
-      <p><strong>Tracking ID:{{'-'}}</strong></p>
+      <p><strong>Payment Status: {{orders.paymentStatus}}</strong></p>
+      <p><strong>Transaction ID: {{orders.paymentId}}</strong></p>
+      <p><strong>Payment Date: {{this.paymentDate}}</strong></p>
+      <p>
+        <strong>Delivery Status:</strong>
+        <span >{{ orders.status }}</span>
+        <select
+          *ngIf="isEditing"
+          [(ngModel)]="orders.status"
+          
+          class="status-dropdown"
+        >
+          <option value="Pending">Pending</option>
+          <option value="Shipped">Shipped</option>
+          <option value="Delivered">Delivered</option>
+          <option value="Cancelled">Cancelled</option>
+        </select>
+        <button class="btn" (click)="isEditing ? saveStatus(orders.id) : editStatus()">
+          {{ isEditing ? 'Save' : 'Edit Status' }}
+        </button>
+      </p>
     </section>
+    
   </div>
   
