--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -1,25 +1,36 @@
 <div class="category-container">
     <div class="category-items">
         <div class="category-item">
-            <div class="category-image saree" (click)="saree()"></div>
-            <div class="category-name">Sarees</div>
+            <div class="category-image MomDaughterCombo" (click)="saree()"></div>
+            <div class="category-name">Mom & DaughterCombo</div>
         </div>
         <div class="category-item">
-            <div class="category-image kurthi"></div>
-            <div class="category-name">Kurthi Tops</div>
+            <div class="category-image familycombo"></div>
+            <div class="category-name">Family Combo</div>
         </div>
         <div class="category-item">
-            <div class="category-image lehenga"></div>
-            <div class="category-name">Lehenga</div>
+            <div class="category-image cs"></div>
+            <div class="category-name">Cousins Squard</div>
         </div>
         <div class="category-item">
-            <div class="category-image kurtha-sets"></div>
-            <div class="category-name">Kurtha Sets</div>
+            <div class="category-image bd"></div>
+            <div class="category-name">Bridesmade</div>
         </div>
+        <div class="category-item">
+          <div class="category-image bm"></div>
+          <div class="category-name">Bridal Coustume</div>
+      </div>
+      <div class="category-item">
+        <div class="category-image mens"></div>
+        <div class="category-name">Menswear</div>
+    </div>
     </div>
     <div class="image-container">
-        <div class="main-image"></div>
-    </div>
+      <button class="prev-btn" onclick="prevImage()">&#10094;</button>
+      <div class="main-image" id="mainImage"></div>
+      <button class="next-btn" onclick="nextImage()">&#10095;</button>
+  </div>
+  
     <div class="newarrivals">
         <h1>New Arrivals</h1>
         <div class="cards-container">
@@ -71,9 +82,9 @@
         </div>
       </div>
       
-    <div class="btn">
+    <!-- <div class="btn">
         <button mat-button >View More</button>
-    </div>
+    </div> -->
     
     
     
